[project]
name = "voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.75.0",
    "google-generativeai>=0.8.6",
    "hf-transfer>=0.1.9",
    "livekit-agents[silero,turn-detector]~=1.5",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.2.2",
]
