[project]
name = "voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "google-genai>=1.75.0",
    "google-generativeai>=0.8.6",
    "hf-transfer>=0.1.9",
    "httpx>=0.28.1",
    "livekit-agents[silero,turn-detector]~=1.5",
    "livekit-plugins-noise-cancellation~=0.2",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "supabase>=2.30.0",
    "uvicorn>=0.46.0",
]
